bug: Fix header shifting to the right

--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,7 @@ body {
 
 .hname {
     grid-area: hname;
-    justify-self: center; 
-  
+    justify-self: center;  
     font-size: 44px;    
     max-width: 250px;
     border-bottom: 1px solid black;
@@ -82,12 +81,18 @@ body {
 .smallimage {
     grid-area: smallimage;
     display: grid;
-
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; 
+    grid-gap: 2px;
+    grid-template-columns: 1fr auto auto auto auto 1fr; 
     grid-template-rows: 1fr;
     grid-template-areas: 
       ". icona iconb iconc icond ."
 }
+
+.icona, .iconb, .iconc, .icond {
+  
+} 
+
+
 
 .icona {
   grid-area: icona;
